# app0

./: .env  .env.production  DOCKER_CONSOLIDATION_COMPLETE.md  DOCKER_README.md  Dockerfile  README.md  VALIDATION_RESULTS.md  docker-compose.prod.yml  docker-compose.yml  docker-manager.ps1  llm_validation_report_20250531_114650.json  manage_databases.ps1  manage_databases.sh  validate-docker.ps1  validate_complete_setup.ps1  validate_complete_setup.sh
.docs/: Plano.md  Plano_db.md  (+4 more)
backend/: .env.example  .gitignore  DATABASE_IMPLEMENTATION_STATUS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: cac1152596da_comprehensive_database_architecture.py
backend/app/: __init__.py  main.py  main.py.backup
backend/app/api/: deps.py  middleware.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  mongodb.py  redis_client.py  security.py
backend/app/domains/: __init__.py
backend/app/domains/audit/: __init__.py  models.py  repository.py
backend/app/domains/auth/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/calendar/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/celery/: __init__.py  models.py  repository.py
backend/app/domains/companies/: models.py  repository.py  schemas.py  service.py
backend/app/domains/documents/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/files/: __init__.py  models.py  repository.py  schemas.py
backend/app/domains/forms/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/domains/kanban/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/shared/: __init__.py
backend/app/tasks/: ai_tasks.py  base_task.py  celery_app.py  llm_tasks.py  monitoring_tasks.py
backend/nginx/: default.conf  nginx.conf
(+462 files in other folders)
